--- a/src/styles/Tutorial.css
+++ b/src/styles/Tutorial.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap');
-
 :root {
   --blue-0: #0646ad;
   --blue-1: #15448e;
@@ -31,8 +29,7 @@
 html,
 body,
 #root {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
+  font-family: monospace;
   margin: 0;
   padding: 0;
   height: 100%;
